# x64dbgMCP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: release.yml
src/: MCPx64dbg.cpp  x64dbg.py
